Login estable, configurando modulo de clientes

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -15,7 +15,7 @@
       </div>
       <alert></alert>
       <div class="col-12 text-center">
-        <bs-button [loader]="false" >Iniciar</bs-button>
+        <bs-button [loader]="loader" >Iniciar</bs-button>
       </div>
     </div>
   </form>
