--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet></router-outlet>
+<app-navbar *ngIf="auth"></app-navbar>
+<div class="container-fluid py-1">
+  <router-outlet></router-outlet>
+</div>
