--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $primary: #05050e;
 $font-size-base: .91rem;
 $body-bg: #fafafa;
-
+$input-focus-box-shadow: none;
 //medidas
 $mobil: 576px;
 $tablet: 768px;
