--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,38 +1,28 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">VentasApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="main_nav">
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
-        <!--<li class="nav-item active"> <a class="nav-link" href="#">Home </a> </li>-->
-        <li class="nav-item dropdown" id="myDropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">  Registro/Control  </a>
-          <ul class="dropdown-menu">
-            <li> <a class="dropdown-item" href="#"> Clientes &raquo; </a>
-              <ul class="submenu dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/persons">Listado Clientes</a></li>
-                <li><a class="dropdown-item" href="#">Registrar Cliente</a></li>
-                <li><a class="dropdown-item" href="#">Modificar/Eliminar Cliente</a></li>
-                <!--<li><a class="dropdown-item" href="#">Submenu item 3 &raquo; </a>
-                  <ul class="submenu dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Multi level 1</a></li>
-                    <li><a class="dropdown-item" href="#">Multi level 2</a></li>
-                  </ul>
-                </li>-->
-              </ul>
-            </li>
-            <li> <a class="dropdown-item" href="#"> Ventas &raquo; </a>
-              <ul class="submenu dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/persons">Registrar Venta</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark drop">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-submenu-toggle" href="#">Submenu</a>
+              <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
               </ul>
             </li>
           </ul>
         </li>
       </ul>
     </div>
-    <!-- navbar-collapse.// -->
   </div>
-  <!-- container-fluid.// -->
 </nav>
