--- a/src/app/modules/persons/views/list-person/list-person.component.html
+++ b/src/app/modules/persons/views/list-person/list-person.component.html
@@ -1,26 +1,35 @@
-<app-add-client></app-add-client>
-<table class="table">
-  <thead>
+<div class="page-header">
+  <h5>Listado de clientes</h5>
+  <app-add-client (create)="onCreateClient($event)"></app-add-client>
+</div>
+<div class="table-responsive">
+  <table class="table table-bordered table-hover">
+    <thead>
     <tr>
-      <th scope="col">ID</th>
+      <th scope="col" class="text-center">ID</th>
       <th scope="col">Nombres y Apellidos</th>
       <th scope="col">RUC/CI</th>
       <th scope="col">Celular</th>
       <th scope="col">Email</th>
-      <th></th>
+      <th class="text-center"><i class="fa fa-cog"></i></th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     <tr *ngFor="let p of persons">
       <td>{{ p.id }}</td>
       <td>{{ p.name }}</td>
       <td>{{ p.doc }}</td>
       <td>{{ p.phone }}</td>
       <td>{{ p.email }}</td>
-      <td></td>
+      <td class="text-center">
+        <button class="s-btn text-danger"><i class="fa fa-trash"></i></button>
+        <button class="s-btn text-info"><i class="fa fa-pencil"></i></button>
+      </td>
     </tr>
     <tr *ngIf="persons.length <= 0">
       <td colspan="6" class="text-center text-muted">Aun no se han registrado clientes</td>
     </tr>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
+
