--- a/src/assets/scss/components/_login.scss
+++ b/src/assets/scss/components/_login.scss
@@ -4,13 +4,12 @@
     justify-content: center;
     align-items: center;
     padding: 0 10px;
-}
-
-@media only screen and (min-width: 992px) {
-    .login {
-        max-width: 450px;
+    width: 100%;
+    @include desktop {
+      max-width: 450px;
     }
 }
+
 
 .login .card {
     padding: 1rem;
@@ -22,9 +21,12 @@
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-​ .app {
+.app {
     height: 100%;
     display: flex;
     justify-content: center;
