Agregar Productos y navbar

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,28 +1,63 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">SysVentas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark drop">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-submenu-toggle" href="#">Submenu</a>
-              <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <!--Registro y control-->
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Registro y Control</a>
+                    <ul class="dropdown-menu dropdown-menu-dark drop">
+                        <!--Clientes-->
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Clientes</a>
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                                <li><a class="dropdown-item" href="#">Nuevo Cliente</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar Cliente</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar Cliente</a></li>
+                            </ul>
+                        </li>
+                        <!--Proveedores-->
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Proveedores</a>
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                                <li><a class="dropdown-item" href="#">Nuevo Proveedor</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar Proveedor</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar Proveedor</a></li>
+                            </ul>
+                        </li>
+                        <!--Inventario-->
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Inventario</a>
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                                <li><a class="dropdown-item" href="#">Nuevo Inventario</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar Inventario</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar Inventario</a></li>
+                            </ul>
+                        </li>
+                        <!--Compras-->
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Compras</a>
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                                <li><a class="dropdown-item" href="#">Nueva Compra</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar Compra</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar Compra</a></li>
+                            </ul>
+                        </li>
+                        <!--Ventas-->
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Ventas</a>
+                            <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
+                                <li><a class="dropdown-item" href="#">Nueva Venta</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar Venta</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar Venta</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
