Editar, Eliminar clientes

--- a/src/app/modules/persons/components/frm-person/frm-person.component.html
+++ b/src/app/modules/persons/components/frm-person/frm-person.component.html
@@ -2,7 +2,7 @@
   <label class="label-title"><span>Datos de básicos</span></label>
   <div class="col-12 col-md-6">
     <label for="ruc" class="form-label">CI/Ruc: * </label>
-    <input type="text"
+    <input type="text" autofocus
            [(ngModel)]="formData.doc"
            name="doc"
            class="form-control" id="ruc" required>
@@ -71,7 +71,8 @@
   </div>
 
   <div class="col-12 text-end mt-4">
-    <button class="btn btn-outline-danger me-2" data-bs-dismiss="modal">Cancelar</button>
-    <bs-button [loader]="loader"><i class="fa fa-save me-1"></i> Guardar Cliente</bs-button>
+    <button class="btn btn-outline-danger me-2" type="button" data-bs-dismiss="modal">Cancelar</button>
+    <bs-button [loader]="loader" *ngIf="!edit" variant="primary"><i class="fa fa-save me-1"></i> Guardar Cliente</bs-button>
+    <bs-button [loader]="loader" *ngIf="edit" variant="success"><i class="fa fa-refresh me-1"></i> Actualizar Cliente</bs-button>
   </div>
 </form>
