Mejora en menu desplegable Superior

--- a/src/app/core/components/modal-confirm/modal-confirm.component.html
+++ b/src/app/core/components/modal-confirm/modal-confirm.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modalConfirm" tabindex="-1" aria-labelledby="modalConfirmLabel" aria-hidden="true">
+<div class="modal fade" #confirm id="modalConfirm" tabindex="-1" aria-labelledby="modalConfirmLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
