--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark drop">
                         <!--Clientes-->
                         <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Clientes</a>
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#customer"/></svg>Clientes</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
                                 <li><a class="dropdown-item" href="#">Nuevo Cliente</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Cliente</a></li>
@@ -21,7 +21,7 @@
                         </li>
                         <!--Proveedores-->
                         <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Proveedores</a>
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#group"/></svg>Proveedores</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
                                 <li><a class="dropdown-item" href="#">Nuevo Proveedor</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Proveedor</a></li>
@@ -30,7 +30,7 @@
                         </li>
                         <!--Inventario-->
                         <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Inventario</a>
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#inventory"/></svg>Inventario</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
                                 <li><a class="dropdown-item" href="#">Nuevo Inventario</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Inventario</a></li>
@@ -39,7 +39,7 @@
                         </li>
                         <!--Compras-->
                         <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Compras</a>
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#shopping-cart"/></svg>Compras</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
                                 <li><a class="dropdown-item" href="#">Nueva Compra</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Compra</a></li>
@@ -48,7 +48,7 @@
                         </li>
                         <!--Ventas-->
                         <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#">Ventas</a>
+                            <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#bill-2"/></svg>Ventas</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
                                 <li><a class="dropdown-item" href="#">Nueva Venta</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Venta</a></li>
