Listado de productos, registro de categorias

--- a/src/app/modules/inventory/components/dialog-add-product/dialog-add-product.component.html
+++ b/src/app/modules/inventory/components/dialog-add-product/dialog-add-product.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-sm btn-success" type="button" data-bs-toggle="modal" data-bs-target="#modalAddPerson"><i class="fa fa-plus"></i></button>
-<app-modal idModal="modalAddPerson" [showFooter]="false" title="Agregar Producto">
+<button class="btn btn-sm btn-success" type="button" data-bs-toggle="modal" data-bs-target="#modalAddProduct"><i class="fa fa-plus"></i></button>
+<app-modal idModal="modalAddProduct" [showFooter]="false" title="Agregar Producto">
     <app-frm-product body (create)="onCreateProduct($event)"></app-frm-product>
 </app-modal>
