Clientes estable, factura de venta

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -14,8 +14,8 @@
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#customer"/></svg>Clientes</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
-                                <li><a class="dropdown-item" href="#">Nuevo Cliente</a></li>
-                                <li><a class="dropdown-item" href="#">Modificar Cliente</a></li>
+                              <li><a class="dropdown-item" routerLink="/persons">Listar Clientes</a></li>
+                              <li><a class="dropdown-item" routerLink="/persons/add">Nuevo Cliente</a></li>
                                 <li><a class="dropdown-item" href="#">Eliminar Cliente</a></li>
                             </ul>
                         </li>
@@ -50,7 +50,7 @@
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#bill-2"/></svg>Ventas</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
-                                <li><a class="dropdown-item" href="#">Nueva Venta</a></li>
+                                <li><a class="dropdown-item" routerLink="/invoice">Nueva Venta</a></li>
                                 <li><a class="dropdown-item" href="#">Modificar Venta</a></li>
                                 <li><a class="dropdown-item" href="#">Eliminar Venta</a></li>
                             </ul>
