--- a/src/app/modules/inventory/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/components/frm-product/frm-product.component.html
@@ -2,11 +2,11 @@
     <label class="label-title"><span>Datos del producto</span></label>
     <div class="col-12 col-md-6">
         <label for="product_cod" class="form-label">Codigo / Codigo Barra: *</label>
-        <input type="text" [(ngModel)]="formData.product_cod" name="product_cod" class="form-control" id="product_cod" required>
+        <input type="text" [(ngModel)]="formData.code" name="product_cod" class="form-control" id="product_cod" required>
     </div>
     <div class="col-12 col-md-4">
         <label for="product_category" class="form-label">Categoria: *</label>
-        <input [(ngModel)]="formData.product_category" name="product_category" id="product_category" class="form-control">
+        <input [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
     </div>
     <div class="div col-12 col-md-2">
         <app-add-category></app-add-category>
@@ -16,19 +16,18 @@
 
     <div class="col-12 col-md-6">
         <label for="product_name" class="form-label">Nombre: *</label>
-        <input type="text" id="product_name" [(ngModel)]="formData.product_name" name="product_name" class="form-control" required>
+        <input type="text" id="product_name" [(ngModel)]="formData.name" name="product_name" class="form-control" required>
     </div>
     <div class="col-12 col-md-6">
         <label for="product_description" class="form-label">Descripción:</label>
-        <input type="text" id="product_description" [(ngModel)]="formData.product_description" name="product_description" class="form-control">
+        <input type="text" id="product_description" [(ngModel)]="formData.description" name="product_description" class="form-control">
     </div>
 
     <div class="col-12 col-md-6">
         <label for="product__class" class="form-label">Clase: *</label>
-        <select [(ngModel)]="formData.product__class" name="product__class" id="product__class" class="form-select" required>
-    <option value="Case1" selected>Opción 1</option>
-    <option value="Case2">Opción 2</option>
-    <option value="Case3" >Opción 3</option>
+        <select [(ngModel)]="formData.type" name="product__class" id="product__class" class="form-select" required>
+    <option value="PRODUCTO" selected>Producto</option>
+    <option value="SERVICIO">Servicio</option>
     <option value="OTRO" >Otro</option>
   </select>
     </div>
@@ -36,34 +35,32 @@
 
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
-        <select [(ngModel)]="formData.product__iva" name="product__iva" id="product__iva" class="form-select" required>
-  <option value="Case1" selected>Opción 1</option>
-  <option value="Case2">Opción 2</option>
-  <option value="Case3" >Opción 3</option>
-  <option value="OTRO" >Otro</option>
-</select>
+        <select [(ngModel)]="formData.iva" name="product__iva" id="product__iva" class="form-select" required>
+          <option value="1" selected>Si</option>
+          <option value="2">No</option>
+        </select>
     </div>
 
     <label class="label-title"><span>Precios</span></label>
     <div class="col-12">
         <div class="row g-2">
             <div class="div col-3 col-md-3">
-                <label for="product_price" class="form-label">P. Costo</label>
-                <input type="tel" id="product_price" [(ngModel)]="formData.product_price" name="product_price" class="form-control">
+                <label for="product_price" class="form-label" required>P. Costo</label>
+                <input type="tel" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInput($event.target.value)">
             </div>
             <div class="div col-3 col-md-3">
                 <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
-                <input type="email" id="product_pricePlusIva" [(ngModel)]="formData.product_pricePlusIva" name="product_pricePlusIva" class="form-control">
+                <input type="number" id="product_pricePlusIva" name="product_pricePlusIva" class="form-control" disabled [value]="priceValuePlusIva">
             </div>
 
             <div class="div col-3 col-md-3">
                 <label for="product_utility" class="form-label">% Utilidad</label>
-                <input type="number" id="product_utility" [(ngModel)]="formData.product_utility" name="product_utility" class="form-control">
+                <input type="number" id="product_utility" name="product_utility" class="form-control">
             </div>
 
             <div class="div col-3 col-md-3">
                 <label for="product_PVPPlusIva" class="form-label">PVP + Iva</label>
-                <input type="number" id="product_PVPPlusIva" [(ngModel)]="formData.product_PVPPlusIva" name="product_PVPPlusIva" class="form-control">
+                <input type="number" id="product_PVPPlusIva" name="product_PVPPlusIva" class="form-control" disabled>
             </div>
         </div>
     </div>
