--- a/src/app/modules/inventory/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/components/frm-product/frm-product.component.html
@@ -6,7 +6,9 @@
     </div>
     <div class="col-12 col-md-4">
         <label for="product_category" class="form-label">Categoria: *</label>
-        <input [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
+        <select [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
+            <option *ngFor="let c of categories" value="{{c.id}}">{{ c.name }}</option>
+        </select>
     </div>
     <div class="div col-12 col-md-2">
         <app-add-category></app-add-category>
@@ -26,7 +28,8 @@
     <div class="col-12 col-md-6">
         <label for="product__class" class="form-label">Clase: *</label>
         <select [(ngModel)]="formData.type" name="product__class" id="product__class" class="form-select" required>
-    <option value="PRODUCTO" selected>Producto</option>
+
+        <option value="PRODUCTO" selected>Producto</option>
     <option value="SERVICIO">Servicio</option>
     <option value="OTRO" >Otro</option>
   </select>
@@ -35,9 +38,9 @@
 
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
-        <select [(ngModel)]="formData.iva" name="product__iva" id="product__iva" class="form-select" required>
-          <option value="1" selected>Si</option>
-          <option value="2">No</option>
+        <select [(ngModel)]="formData.iva" name="product__iva" id="product__iva" class="form-select" required (change)="onChangeIVA($event.target.value)">
+          <option value="0" selected>0%</option>
+          <option value="1">12%</option>
         </select>
     </div>
 
@@ -46,7 +49,7 @@
         <div class="row g-2">
             <div class="div col-3 col-md-3">
                 <label for="product_price" class="form-label" required>P. Costo</label>
-                <input type="tel" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInput($event.target.value)">
+                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" step="any">
             </div>
             <div class="div col-3 col-md-3">
                 <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
@@ -55,12 +58,12 @@
 
             <div class="div col-3 col-md-3">
                 <label for="product_utility" class="form-label">% Utilidad</label>
-                <input type="number" id="product_utility" name="product_utility" class="form-control">
+                <input type="number" min="0" id="product_utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)">
             </div>
 
             <div class="div col-3 col-md-3">
                 <label for="product_PVPPlusIva" class="form-label">PVP + Iva</label>
-                <input type="number" id="product_PVPPlusIva" name="product_PVPPlusIva" class="form-control" disabled>
+                <input type="number" min="0" id="product_PVPPlusIva" name="product_PVPPlusIva" class="form-control" [value]="priceFinalPlusIva" step="any">
             </div>
         </div>
     </div>
