--- a/src/app/modules/invoice/views/create-invoice/create-invoice.component.html
+++ b/src/app/modules/invoice/views/create-invoice/create-invoice.component.html
@@ -27,30 +27,7 @@
     </div>
 
   </div>
-  <label class="label-title mb-0">Producto</label>
-  <div class="row g-2 mt-0">
-    <div class="col-6 col-md-3">
-      <input type="text" class="form-control" placeholder="Cod. Nombre. Desc.">
-    </div>
-    <div class="col-6 col-md-4">
-      <input type="text" class="form-control" placeholder="Producto" readonly>
-    </div>
-    <div class="col-6 col-md-1">
-      <input type="number" class="form-control" placeholder="PVP" readonly>
-    </div>
-    <div class="col-6 col-md-1">
-      <input type="number" class="form-control" placeholder="Cantidad" value="1">
-    </div>
-    <div class="col-6 col-md-1">
-      <input type="number" class="form-control" placeholder="Desc %" value="0">
-    </div>
-    <div class="col-6 col-md-1">
-      <input type="number" class="form-control" placeholder="Total" readonly>
-    </div>
-    <div class="col-6 col-md-1">
-      <input type="number" class="form-control" placeholder="Total+Iva" readonly>
-    </div>
-  </div>
+  <app-select-product></app-select-product>
   <label class="label-title">Detalles</label>
   <table class="table table-striped table-hover">
     <thead>
