--- a/src/app/modules/persons/views/add-person/add-person.component.html
+++ b/src/app/modules/persons/views/add-person/add-person.component.html
@@ -1,1 +1,5 @@
-<app-frm-client></app-frm-client>
+<div class="card">
+  <div class="card-body">
+    <app-frm-client></app-frm-client>
+  </div>
+</div>
