--- a/src/app/modules/persons/views/edit-person/edit-person.component.html
+++ b/src/app/modules/persons/views/edit-person/edit-person.component.html
@@ -1,1 +1,5 @@
-<app-frm-client [formData]="person" [edit]="true"></app-frm-client>
+<div class="card">
+  <div class="card-body">
+    <app-frm-client [formData]="person" [edit]="true"></app-frm-client>
+  </div>
+</div>
