--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -12,6 +12,7 @@
   font-weight: 500;
   position: relative;
   overflow: hidden;
+  display: block;
   margin: .4rem 0;
   span {
     background: inherit;
