--- a/src/app/modules/inventory/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/components/frm-product/frm-product.component.html
@@ -5,19 +5,22 @@
         <input type="text" [(ngModel)]="formData.code" name="product_cod" class="form-control" id="product_cod" required>
     </div>
     <div class="col-12 col-md-4">
-        <label for="product_category" class="form-label">Categoria: *</label>
-
-        <select *ngIf="category == null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
+        <label for="product_category" class="form-label">Categoría: *</label>
+        <div class="d-flex">
+          <select *ngIf="category == null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
             <option  *ngFor="let c of categories" value="{{c.id}}">{{ c.name }}</option>
-        </select>
+          </select>
 
-        <select *ngIf="category != null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
+          <select *ngIf="category != null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
             <option value="{{category.id}}" selected >{{ category.name }}</option>
-        </select>
+          </select>
+          <app-add-category></app-add-category>
+          <app-dialog-search-category (select)="onSelect($event)"></app-dialog-search-category>
+        </div>
+
     </div>
     <div class="div col-12 col-md-2">
-        <app-add-category></app-add-category>
-        <app-dialog-search-category (select)="onSelect($event)"></app-dialog-search-category>
+
 
         <!-- <button class="btn btn-sm btn btn-secondary" type="button"><i class="fa fa-plus"></i></button>
         <button class="btn btn-sm btn btn-secondary" type="button"><i class="fa fa-search"></i></button> -->
