--- a/src/app/modules/inventory/views/add-product/add-product.component.html
+++ b/src/app/modules/inventory/views/add-product/add-product.component.html
@@ -1,1 +1,5 @@
-<app-frm-product></app-frm-product>
+<div class="card">
+  <div class="card-body">
+    <app-frm-product></app-frm-product>
+  </div>
+</div>
