--- a/src/app/modules/inventory/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/components/frm-product/frm-product.component.html
@@ -2,30 +2,23 @@
     <label class="label-title"><span>Datos del producto</span></label>
     <div class="col-12 col-md-6">
         <label for="product_cod" class="form-label">Codigo / Codigo Barra: *</label>
-        <input type="text" [(ngModel)]="formData.code" name="product_cod" class="form-control" id="product_cod" required>
+        <input type="text" [(ngModel)]="formData.code"
+               name="product_cod" class="form-control" id="product_cod" required>
     </div>
-    <div class="col-12 col-md-4">
-        <label for="product_category" class="form-label">Categoría: *</label>
-        <div class="d-flex">
-          <select *ngIf="category == null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
-            <option  *ngFor="let c of categories" value="{{c.id}}">{{ c.name }}</option>
-          </select>
-
-          <select *ngIf="category != null" [(ngModel)]="formData.category_id" name="product_category" id="product_category" class="form-control">
-            <option value="{{category.id}}" selected >{{ category.name }}</option>
-          </select>
-          <app-add-category></app-add-category>
-          <app-dialog-search-category (select)="onSelect($event)"></app-dialog-search-category>
+    <div class="col-12 col-md-6">
+        <label for="category_id" class="form-label">Categoría: *</label>
+        <div class="input-group">
+          <input type="text" id="category_id"
+                 [(ngModel)]="category.id"
+                 (keypress)="onSearchCategory($event)"
+                 name="category_id" class="form-control">
+          <input type="text" id="category"
+                 [(ngModel)]="category.name"
+                 name="category" class="form-control" readonly>
+          <app-add-category (create)="onSelectCategory($event)"></app-add-category>
+          <app-dialog-search-category (select)="onSelectCategory($event)"></app-dialog-search-category>
         </div>
-
     </div>
-    <div class="div col-12 col-md-2">
-
-
-        <!-- <button class="btn btn-sm btn btn-secondary" type="button"><i class="fa fa-plus"></i></button>
-        <button class="btn btn-sm btn btn-secondary" type="button"><i class="fa fa-search"></i></button> -->
-    </div>
-
     <div class="col-12 col-md-6">
         <label for="product_name" class="form-label">Nombre: *</label>
         <input type="text" id="product_name" [(ngModel)]="formData.name" name="product_name" class="form-control" required>
@@ -38,7 +31,6 @@
     <div class="col-12 col-md-6">
         <label for="product__class" class="form-label">Clase: *</label>
         <select [(ngModel)]="formData.type" name="product__class" id="product__class" class="form-select" required>
-
         <option value="PRODUCTO" selected>Producto</option>
     <option value="SERVICIO">Servicio</option>
     <option value="OTRO" >Otro</option>
@@ -48,9 +40,9 @@
 
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
-        <select [(ngModel)]="formData.iva" name="product__iva" id="product__iva" class="form-select" required (change)="onChangeIVA($event.target.value)">
-          <option value="0" selected>0%</option>
-          <option value="1">12%</option>
+        <select [(ngModel)]="iva" name="product__iva" id="product__iva" class="form-select"
+                required (change)="onChangeIVA($event.target.value)">
+          <option *ngFor="let i of ivaList" [value]="i" selected>{{ i }}%</option>
         </select>
     </div>
 
@@ -59,11 +51,13 @@
         <div class="row g-2">
             <div class="div col-3 col-md-3">
                 <label for="product_price" class="form-label" required>P. Costo</label>
-                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" step="any">
+                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase"
+                       name="product_price" class="form-control"
+                       (input)="onInputPrice($event.target.value)" step="any">
             </div>
             <div class="div col-3 col-md-3">
                 <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
-                <input type="number" id="product_pricePlusIva" name="product_pricePlusIva" class="form-control" disabled [value]="priceValuePlusIva">
+                <input type="number" id="product_pricePlusIva" name="product_pricePlusIva" class="form-control" disabled [value]="pvp">
             </div>
 
             <div class="div col-3 col-md-3">
@@ -72,14 +66,15 @@
             </div>
 
             <div class="div col-3 col-md-3">
-                <label for="product_PVPPlusIva" class="form-label">PVP + Iva</label>
-                <input type="number" min="0" id="product_PVPPlusIva" name="product_PVPPlusIva" class="form-control" [value]="priceFinalPlusIva" step="any">
+                <label for="pvpIva" class="form-label">PVP + Iva</label>
+                <input type="number" min="0" id="pvpIva" name="pvpIva"
+                       class="form-control" [(ngModel)]="pvpIva" step="any">
             </div>
         </div>
     </div>
 
     <div class="col-12 text-end mt-4">
-        <button class="btn btn-outline-danger me-2" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-outline-danger me-2" data-bs-dismiss="modal">Cancelar</button>
         <bs-button [loader]="loader"><i class="fa fa-save me-1"></i>Registrar Producto</bs-button>
     </div>
 </form>
