--- a/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
@@ -2,21 +2,16 @@
     <label class="label-title"><span>Datos del producto</span></label>
     <div class="col-12 col-md-6">
         <label for="product_cod" class="form-label">Codigo / Codigo Barra: *</label>
-        <input type="text" [(ngModel)]="formData.code"
-               name="product_cod" class="form-control" id="product_cod" required>
+        <input type="text" [(ngModel)]="formData.code" name="product_cod" class="form-control" id="product_cod" required>
     </div>
     <div class="col-12 col-md-6">
         <label for="category_id" class="form-label">Categoría: *</label>
         <div class="input-group">
-          <input type="text" id="category_id"
-                 [(ngModel)]="category.id"
-                 (keypress)="onSearchCategory($event)"
-                 name="category_id" class="form-control">
-          <input type="text" id="category"
-                 [(ngModel)]="category.name"
-                 name="category" class="form-control" readonly>
-          <app-add-category (create)="onSelectCategory($event)"></app-add-category>
-          <app-dialog-search-category (select)="onSelectCategory($event)"></app-dialog-search-category>
+            <input type="text" id="category_id" [(ngModel)]="category.id" (keypress)="onSearchCategory($event)" name="category_id" class="form-control" hidden>
+            <input type="
+            text" id="category" [(ngModel)]="category.name" name="category" class="form-control" readonly>
+            <app-add-category (create)="onSelectCategory($event)"></app-add-category>
+            <app-dialog-search-category (select)="onSelectCategory($event)"></app-dialog-search-category>
         </div>
     </div>
     <div class="col-12 col-md-6">
@@ -40,8 +35,7 @@
 
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
-        <select [(ngModel)]="iva" name="product__iva" id="product__iva" class="form-select"
-                required (change)="onChangeIVA($event.target.value)">
+        <select [(ngModel)]="iva" name="product__iva" id="product__iva" class="form-select" required (change)="onChangeIVA($event.target.value)">
           <option *ngFor="let i of ivaList" [value]="i" selected>{{ i }}%</option>
         </select>
     </div>
@@ -51,9 +45,7 @@
         <div class="row g-2">
             <div class="div col-3 col-md-3">
                 <label for="product_price" class="form-label" required>P. Costo</label>
-                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase"
-                       name="product_price" class="form-control"
-                       (input)="onInputPrice($event.target.value)" step="any">
+                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" step="any">
             </div>
             <div class="div col-3 col-md-3">
                 <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
@@ -62,13 +54,12 @@
 
             <div class="div col-3 col-md-3">
                 <label for="product_utility" class="form-label">% Utilidad</label>
-                <input type="number" min="0" id="product_utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)">
+                <input type="number" min="0" id="product_utility" [value]="utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)">
             </div>
 
             <div class="div col-3 col-md-3">
                 <label for="pvpIva" class="form-label">PVP + Iva</label>
-                <input type="number" min="0" id="pvpIva" name="pvpIva"
-                       class="form-control" [(ngModel)]="pvpIva" step="any">
+                <input type="number" min="0" id="pvpIva" name="pvpIva" (input)="onInputFinalPrice($event.target.value)" class="form-control" [(ngModel)]="pvpIva" step="any">
             </div>
         </div>
     </div>
