Add loader and fix bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-loading-bar color="#198754" height="1.2px" [includeSpinner]="false"></ngx-loading-bar>
 <app-navbar *ngIf="auth"></app-navbar>
 <div class="container-fluid py-1">
   <router-outlet></router-outlet>
