--- a/src/app/modules/roles/views/add-rol/add-rol.component.html
+++ b/src/app/modules/roles/views/add-rol/add-rol.component.html
@@ -20,19 +20,18 @@
         <div *ngFor="let tM of tagsModules; Index as i" class="accordion" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapse">
                   Modulo {{tM[1]}}
                 </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body" *ngFor="let p of permissions">
-                        <div class="form-check" *ngIf="p.parent == tM[0]">
-                            <input class="form-check-input" type="checkbox" id="permiso{{p.id}}" (change)="onCheckPermiso($event)">
-                            <label class="form-check-label" for="permiso{{p.id}}">
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample" *ngFor="let p of permissions">
+                    <div class="accordion-body" *ngIf="p.parent == tM[0]">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="{{'permiso' + p.id}}" (change)="onCheckPermiso(p.id, $event.target.checked)">
+                            <label class="form-check-label">
                                   {{p.name}}
                                 </label>
                         </div>
-
                     </div>
                 </div>
             </div>
